fixed image issue on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1010,6 +1010,21 @@ li {
     width: 80%;
     margin: auto;
   }
+
+  .post-template .gh-cover {
+    --cover-height: 100vh;
+    align-items: flex-end;
+    background-color: transparent;
+    margin-bottom: -56px;
+    padding-bottom: 0;
+    margin-top: 70px;
+  }
+  .gh-cover-image {
+    object-fit: cover;
+  }
+  .post-template .gh-cover {
+    padding-top: 70px;
+  }
   .gh-topic-grid .gh-topic-content {
     grid-template-columns: 1fr;
   }
